--- a/style.css
+++ b/style.css
@@ -6,8 +6,7 @@
 }
 
 body{
-    background: rgb(58,180,127);
-    background: linear-gradient(90deg, rgba(58,180,127,1) 0%, rgba(111,18,210,1) 75%, rgba(252,163,255,1) 100%);
+    background-image: url("temp.jpg");
 }
 .card{
     width: 90%;
